--- a/src/styles/pages/Admin/AdminUnseenComplaintDetails.css
+++ b/src/styles/pages/Admin/AdminUnseenComplaintDetails.css
@@ -22,12 +22,25 @@
     margin-bottom: 2vh;
     background-color: #fff;
     border-radius: 15px;
+    padding: 0 20px;
   }
 
   .unseen-complaint-title-container h3{
-    margin: 20px;
     font-weight: 800;
+    color: #000;
   }
+
+  .unseen-complaint-title-container button{
+    margin-top: 5px;
+    font-weight: 800;
+    color: #000;
+  }
+
+  .unseen-complaint-title-container button:hover{
+  background-color: #fff;
+  transform: scale(1.1);
+  color: #0991FF;
+}
 
   .admin-unseen-complain-details-panel{
     width: 93%;
