--- a/src/styles/pages/Admin/Complaint.css
+++ b/src/styles/pages/Admin/Complaint.css
@@ -22,11 +22,11 @@
   margin-bottom: 2vh;
   background-color: #fff;
   border-radius: 15px;
+  padding: 20px 20px;
 }
 
 
 .admin-complaint-title-container h3{
-  margin: 20px;
   font-weight: 800;
   color: #000;
 }
