--- a/src/styles/pages/Admin/AdminUnseenComplaintDetails.css
+++ b/src/styles/pages/Admin/AdminUnseenComplaintDetails.css
@@ -73,12 +73,16 @@
   .unseen-complaints-profile-details{
     width: 20%;
     float: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
-  .unseen-complaints-profile-details h4,
+  /* .unseen-complaints-profile-details h4,
   .unseen-complaints-profile-details p{
     text-align: center;
-  }
+  } */
 
   .unseen-complaints-profile-details h4{
     margin-top: 3vh;
@@ -89,7 +93,7 @@
     border-radius: 50%;
     width: 200px;
     height: auto;
-    margin: 0 auto;
+    /* margin: 0 auto; */
   }
 
   .unseen-complaints-citizen-form-details{
@@ -101,6 +105,9 @@
   .unseen-complaints-uploaded-images{
     width: 30%;
     float: right;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .unseen-complaints-profile-details,
@@ -122,7 +129,15 @@
     border-bottom: 2px solid rgba(171, 217, 255, 0.762);
   }
 
-  .unseen-complaints-citizen-form-details-first-part h4{
+  .unseen-complaints-citizen-form-details-Second-part{
+    width: 100%;
+    height: 8vh;
+    margin-bottom: 1vh;
+  }
+
+
+  .unseen-complaints-citizen-form-details-first-part h4,
+  .unseen-complaints-citizen-form-details-Second-part h4{
     font-weight:bold;
   }
 
@@ -143,51 +158,6 @@
     text-align: left;
   }
 
-  .unseen-complaints-contractor-details{
-    width: 100%;
-    height: 25vh;
-    display: flex;
-    align-items: center;
-    background-color: #fff;
-    border-radius: 15px;
-    margin-top: 5vh;
-    padding-left: 10%;
-  }
-
-  .unseen-complaints-contractor-details-first-div{
-    width: 40%;
-    height: auto;
-  }
-
-  .unseen-complaints-contractor-details-second-div{
-    width: 50%;
-    height: auto;
-  }
-
-  .unseen-complaints-contractor-details-second-div button{
-    width: 25%;
-    height: 5vh;
-    color: #000;
-    background: rgb(9, 145, 255);
-    margin-right: 20px;
-  }
-
-  .unseen-complaints-contractor-details-second-div button:hover{
-    transform: scale(1.1);
-    background: #0074d3;
-    color: #fff;
-  }
-
-  .Complaint-uploaded-image-slider-view-buttons{
-    width: 20%;
-    height: 10vh;
-    margin-top: 10vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-right: 20px;
-  }
-
   .Complaint-uploaded-completed-seal{
     width: 20%;
     height: 25vh;
@@ -199,26 +169,4 @@
   .Complaint-uploaded-completed-seal img{
     width: 100px;
     height: auto;
-  }
-
-  .Complaint-uploaded-image-slider-view-buttons button{
-    margin-right: 10px;
-    width: 50%;
-    height: 6vh;
-    color: #000;
-    background: rgb(9, 145, 255);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .Complaint-uploaded-image-slider-view-buttons button:hover{
-    transform: scale(0.9);
-    background: #0074d3;
-    color: #fff;
-  }
-
-  .extra-div-for-style{
-    width: 100%;
-    height: 3vh;
   }
