--- a/src/styles/components/Admin/TableView.css
+++ b/src/styles/components/Admin/TableView.css
@@ -92,7 +92,13 @@
 
 @media (max-width: 1024px) {
     .complaint-table-with-details-row-column-1{
-        display: none;
+        width: 400px;
+    }
+}
+
+@media (max-width: 700px) {
+    .complaint-table-with-details-row-column-3{
+        display: none;  
     }
 }
 
