--- a/src/styles/components/Admin/TabView.css
+++ b/src/styles/components/Admin/TabView.css
@@ -49,7 +49,16 @@
     height: 5vh;
 }
 
-/* .Complaints-search-bar button{
+.Complaints-search-bar-and-fliter-dropdown input{
+    width: 300px;
+    height: 5vh;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 2px solid #69b6f5;
+    border-radius: 10px;
+}
+
+.Complaints-search-bar-and-fliter-dropdown button{
     width: 30px;
     height: 5vh;
     background: #0991FF;
@@ -60,11 +69,11 @@
     align-items: center;
 }
 
-.Complaints-search-bar button:hover{
+.Complaints-search-bar-and-fliter-dropdown button:hover{
     transform: scale(0.9);
     background: #0074d3;
     color: #fff;
-  } */
+  }
 
   .Complaints-search-bar-and-fliter-dropdown .complaints-search-bar input{
     width: 300px;
